--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "babel-preset-env": "^1.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec npx babel-node -- ./index.js"
   },
   "repository": {
     "type": "git",
